# pvz-trainer-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/trainer/: mod.rs  offset.rs
