[package]
name = "pvz-trainer-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
libmem = "5.0.4"
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = {version =  "0.31.1",  features = ["default", "all_loaders"]}
env_logger = "0.11.8"
image = { version = "0.25.6", features = ["jpeg", "png"]}

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_UI_WindowsAndMessaging",
]